; ModuleID = '/home/carl/AnghaBench/xLua/build/luajit-2.1.0b3/src/extr_lj_cdata.c_lj_cdata_newx.c'
source_filename = "/home/carl/AnghaBench/xLua/build/luajit-2.1.0b3/src/extr_lj_cdata.c_lj_cdata_newx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@CTF_VLA = common dso_local global i32 0, align 4
@CT_MEMALIGN = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @lj_cdata_newx(%struct.TYPE_4__* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_4__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @CTF_VLA, align 4
  %12 = and i32 %10, %11
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %24, label %14

14:                                               ; preds = %4
  %15 = load i32, i32* %9, align 4
  %16 = call i64 @ctype_align(i32 %15)
  %17 = load i64, i64* @CT_MEMALIGN, align 8
  %18 = icmp sle i64 %16, %17
  br i1 %18, label %19, label %24

19:                                               ; preds = %14
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %21 = load i32, i32* %7, align 4
  %22 = load i32, i32* %8, align 4
  %23 = call i32* @lj_cdata_new(%struct.TYPE_4__* %20, i32 %21, i32 %22)
  store i32* %23, i32** %5, align 8
  br label %33

24:                                               ; preds = %14, %4
  %25 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %26 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = load i32, i32* %7, align 4
  %29 = load i32, i32* %8, align 4
  %30 = load i32, i32* %9, align 4
  %31 = call i64 @ctype_align(i32 %30)
  %32 = call i32* @lj_cdata_newv(i32 %27, i32 %28, i32 %29, i64 %31)
  store i32* %32, i32** %5, align 8
  br label %33

33:                                               ; preds = %24, %19
  %34 = load i32*, i32** %5, align 8
  ret i32* %34
}

declare dso_local i64 @ctype_align(i32) #1

declare dso_local i32* @lj_cdata_new(%struct.TYPE_4__*, i32, i32) #1

declare dso_local i32* @lj_cdata_newv(i32, i32, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
